# reya-python-sdk

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  NEW_README.md  POETRY_GUIDE.md  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: autoupdate.yml  create-release.yml  post-merge-tag.yml  publish-to-pypi.yml  pylint.yml  version-consistency.yml
.openapi-generator/: FILES
data_feed/: __init__.py  example.py  websocket_client.py
examples/: .env.example  basic_market_data.py  bridge_in_and_deposit.py  consume_data_feed.py  ma_funds_flow.py  passive_pool_funds_flow.py  pyproject.toml  sign.py  trade_based_on_updates.py  trade_execution.py  update_oracle_prices.py  wallet_monitoring.py  withdraw_and_bridge_out.py
examples/abis/: CoreProxy.json  Multicall2.json  OracleAdapterProxy.json  PassivePerpProxy.json  VaultWithPayload.json
examples/actions/: bridge_in.py  bridge_out.py  create_account.py  deposit.py  stake.py  trade.py  transfer.py  unstake.py  update_prices.py  withdraw.py
examples/rest_api/: account_info.py  assets_example.py  depth_market_maker.py  markets_example.py  order_entry.py  order_entry_with_position_tracking.py  prices_example.py  wallet_example.py
examples/rest_api/perps/: __init__.py  account_info.py  assets_example.py  markets_example.py  order_entry.py  prices_example.py  wallet_example.py
examples/rest_api/spot/: __init__.py  cancel_order_by_id.py  create_orders.py  depth_market_maker.py  mass_cancel_orders.py  spot_trade.py  spot_transfer.py
examples/rpc/: __init__.py  bridge_in_and_deposit.py  ma_funds_flow.py  passive_pool_funds_flow.py  rusd_cross_wallet_transfer.py  trade_execution.py  update_oracle_prices.py  withdraw_and_bridge_out.py
examples/rpc/perps/: bridge_in_and_deposit.py  rusd_cross_wallet_transfer.py
examples/trading/: account_info.py  cancel_orders.py  order_entry.py
examples/utils/: config.py  consts.py  deposit.py  deposit_or_withdraw.py  execute_core_commands.py  get_core_nonce.py  sign.py  trade.py  transfer.py  withdraw.py
examples/websocket/: basic_market_data.py  market_monitoring.py  prices_monitoring.py  wallet_monitoring.py
examples/websocket/perps/: __init__.py  market_monitoring.py  prices_monitoring.py  wallet_monitoring.py
examples/websocket/spot/: depth_market_maker.py  spot_executions.py
examples/websocket_v2/: basic_market_data.py  wallet_monitoring.py
reya_actions/: __init__.py  config.py  consts.py  pyproject.toml  types.py
reya_actions/abis/: Erc20.json  Multicall.json  PassivePoolProxy.json
reya_actions/actions/: __init__.py  bridge_in.py  bridge_out.py  create_account.py  deposit.py  stake.py  trade.py  transfer.py  unstake.py  update_prices.py  withdraw.py
reya_actions/utils/: execute_core_commands.py
reya_data_feed/: __init__.py  config.py  consumer.py  pyproject.toml  socket.py  websocket_client.py
reya_data_feed/resources/: __init__.py  common.py  market.py  wallet.py
reya_trading/: __init__.py  client.py  config.py  pyproject.toml
reya_trading/auth/: __init__.py  signatures.py
reya_trading/constants/: enums.py
reya_trading/models/: __init__.py  orders.py
reya_trading/resources/: __init__.py  account.py  base.py  orders.py  wallet.py
reya_trading/utils/: __init__.py
reya_v2_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
reya_v2_api/api/: __init__.py  market_data_api.py  order_entry_api.py  reference_data_api.py  wallet_data_api.py
reya_v2_api/models/: __init__.py  account.py  account_balance.py  asset_definition.py  cancel_order_request.py  cancel_order_response.py  candle_data.py  create_order_request.py  create_order_response.py  error.py  error_code.py  execution_type.py  fee_tier_parameters.py  global_fee_parameters.py  liquidity_parameters.py  market_definition.py  market_summary.py  order.py  order_status.py  order_type.py  pagination_meta.py  pagination_parameters.py  perp_execution.py  perp_execution_list.py  position.py  price.py  side.py  spot_execution.py  spot_execution_list.py  time_in_force.py  wallet_configuration.py
scripts/: generate-api.sh  generate-ws.sh  generate.sh
sdk/: __init__.py  _version.py
sdk/async_api/: account_balance.py  account_balance_update_payload.py  channel_data_message_type.py  depth.py  depth_type.py  error_message_payload.py  error_message_type.py  level.py  market_depth_update_payload.py  market_perp_execution_update_payload.py  market_spot_execution_update_payload.py  market_summary.py  market_summary_update_payload.py  markets_summary_channel.py  markets_summary_update_payload.py  open_order_update_payload.py  order.py  order_change_update_payload.py  order_status.py  order_type.py  perp_execution.py  ping_message.py  ping_message_payload.py  ping_message_type.py  pong_message.py  pong_message_payload.py  pong_message_type.py  position.py  position_update_payload.py  price.py  price_update_payload.py  prices_channel.py  prices_update_payload.py  side.py  spot_execution.py  subscribe_message_payload.py  subscribe_message_type.py  subscribed_message_payload.py  subscribed_message_type.py  time_in_force.py  (+6 more)
sdk/open_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk/reya_rest_api/: __init__.py  client.py  config.py
sdk/reya_rpc/: __init__.py  config.py  consts.py  exceptions.py
sdk/reya_websocket/: __init__.py  config.py  socket.py
sdk/scripts/: generate-api.sh  generate-ws.sh
sdk/specs/: README.md  asyncapi-trading-v2.yaml  openapi-trading-v2.yaml  trading-schemas.json
sdk/tests/: __init__.py  conftest.py  models.py  reya_tester.py  test_conditional_orders.py  test_limit_orders.py  test_market_data.py  test_trigger_orders.py  utils.py
telegram_bot/: __init__.py  bot.py  formatters.py  main.py  trading.py
tests/: __init__.py  base_test.py  conftest.py  models.py  reya_tester.py  test_limit_orders.py  test_market_data.py  test_spot.py  test_trigger_orders.py  utils.py
tests/abis/: Errors.json
tests/helpers/: __init__.py  base_test.py  config.py  liquidity_detector.py  (+4 more)
(+158 files in other folders)
